Filter Products in Catalog

--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
@@ -66,8 +66,11 @@
                 Text="FILTER"
                 Style="{StaticResource FilterLabelStyle}"/>
             <Grid.GestureRecognizers>
-                <TapGestureRecognizer 
+                <!--<TapGestureRecognizer 
                         Tapped="OnFilterChanged"
+                        NumberOfTapsRequired="1" />-->
+                <TapGestureRecognizer            
+                        Command="{Binding FilterCommand}"  
                         NumberOfTapsRequired="1" />
             </Grid.GestureRecognizers>
         </Grid>
