--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
@@ -63,7 +63,7 @@
         <Grid
             BackgroundColor="{StaticResource LightGreenColor}">
             <Label 
-                Text="FILTER"
+                Text="{Binding FilterText}"
                 Style="{StaticResource FilterLabelStyle}"/>
             <Grid.GestureRecognizers>
                 <!--<TapGestureRecognizer 
