--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/CatalogView.xaml
@@ -90,6 +90,7 @@
                               SeparatorVisibility="None" 
                               HasUnevenRows="True"
                               FlowItemsSource="{Binding Products}"
+                              FlowRowBackgroundColor="White"
                               Style="{StaticResource ProductsListStyle}">
                 <flv:FlowListView.Behaviors>
                     <behaviors:EventToCommandBehavior                    
