--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/OrderItemTemplate.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/OrderItemTemplate.xaml
@@ -101,7 +101,7 @@
                     <!-- PRICE -->
                     <Label 
                         Grid.Column="0"
-                        Text="{Binding UnitPrice, StringFormat='${0:N}'}"
+                        Text="{Binding UnitPrice, StringFormat='€{0:N}'}"
                         Style="{StaticResource OrderItemUnitPriceStyle}"/>
                     <Label 
                         Grid.Column="1"
@@ -111,7 +111,7 @@
                 <!-- TOTAL -->
                 <Label
                     Grid.Row="2"
-                    Text="{Binding Total, StringFormat='${0:N}'}"
+                    Text="{Binding Total, StringFormat='€{0:N}'}"
                     Style="{StaticResource OrderTotalStyle}"/>
             </Grid>
             <Grid 
