--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/OrderDetailView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/OrderDetailView.xaml
@@ -32,9 +32,9 @@
                    TargetType="{x:Type Label}"
                    BasedOn="{StaticResource OrderTitleStyle}">
                 <Setter Property="FontSize"
-                        Value="{StaticResource LargeSize}" />
+                        Value="{StaticResource MediumSize}" />
                 <Setter Property="TextColor"
-                        Value="Black" />
+                        Value="Gray" />
             </Style>
 
             <Style x:Key="AddressStyle"    
@@ -113,11 +113,10 @@
         <StackLayout
             HeightRequest="50"
             Grid.Column="0"
-            Grid.Row="0"
-            IsVisible="{Binding IsSubmittedOrder}">
+            Grid.Row="0">
             <Button
                 Command="{Binding ToggleCancelOrderCommand}"
-                Text="CANCEL ORDER"
+                Text="CANCELAR ENCOMENDA"
                 Style="{StaticResource CancelOrderButtonStyle}">
             </Button>
         </StackLayout>
@@ -146,7 +145,7 @@
                         Grid.Row="0"
                         Margin="12">
                         <Label 
-                        Text="ORDER NUMBER"
+                        Text="ENCOMENDA #"
                         Style="{StaticResource OrderTitleStyle}"/>
                         <Label 
                         Text="{Binding Order.OrderNumber, Converter={StaticResource ToUpperConverter}}"
@@ -160,7 +159,7 @@
                         Text="TOTAL"
                         Style="{StaticResource OrderTitleStyle}"/>
                         <Label 
-                        Text="{Binding Order.Total, StringFormat='${0:N}', Converter={StaticResource ToUpperConverter}}" 
+                        Text="{Binding Order.Total, StringFormat='€{0:N}', Converter={StaticResource ToUpperConverter}}" 
                         Style="{StaticResource OrderContentStyle}"/>
                     </StackLayout>
                     <StackLayout
@@ -168,7 +167,7 @@
                     Grid.Row="0"
                     Margin="12">
                         <Label 
-                        Text="DATE"
+                        Text="DATA"
                         Style="{StaticResource OrderTitleStyle}"/>
                         <Label 
                         Text="{Binding Order.OrderDate, Converter={StaticResource DatetimeConverter}}"
@@ -179,7 +178,7 @@
                     Grid.Row="1" 
                     Margin="12">
                         <Label 
-                        Text="STATUS"
+                        Text="ESTADO"
                         Style="{StaticResource OrderTitleStyle}"/>
                         <Label 
                         Text="{Binding OrderStatusText}"
@@ -198,22 +197,19 @@
                 </Grid.RowDefinitions>
                 <Label
                     Grid.Row="0"
-                    Text="SHIPPING ADDRESS"
+                    Text="MORADA"
                     Style="{StaticResource ShippingAddressStyle}"/>
                 <StackLayout
                     Grid.Row="1">
-                    <Label
-                        Text="{Binding Order.ShippingStreet}"
-                        Style="{StaticResource AddressStyle}"/>
-                    <Label
-                        Text="{Binding Order.ShippingCity}"   
-                        Style="{StaticResource AddressStyle}"/>
-                    <Label
-                        Text="{Binding Order.ShippingState}"   
-                        Style="{StaticResource AddressStyle}"/>
-                    <Label
-                        Text="{Binding Order.ShippingCountry}"   
-                        Style="{StaticResource AddressStyle}"/>
+                        <Label
+                            Text="{Binding Order.ShippingStreet}"
+                            Style="{StaticResource AddressStyle}"/>
+                        <Label
+                            Text="{Binding Order.ShippingCity}"   
+                            Style="{StaticResource AddressStyle}"/>
+                        <Label
+                            Text="{Binding Order.ShippingCountry}"   
+                            Style="{StaticResource AddressStyle}"/>
                 </StackLayout>
             </Grid>
             <!-- ORDER ITEMS -->
@@ -239,9 +235,8 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <StackLayout
-                    Grid.Row="1"
-                    Margin="0,0,0,24">
+                <!--<StackLayout
+                    Grid.Row="1">
                     <Label 
                         Grid.Row="0"
                         Text="TOTAL"
@@ -249,10 +244,10 @@
                         Style="{StaticResource OrderTotalStyle}"/>
                     <Label 
                         Grid.Row="1"                   
-                        Text="{Binding Order.Total, StringFormat='${0:N}'}"
+                        Text="{Binding Order.Total, StringFormat='€{0:N}'}"
                         TextColor="{StaticResource GreenColor}"
                         Style="{StaticResource OrderTotalStyle}"/>
-                </StackLayout>
+                </StackLayout>-->
             </Grid>
             <!-- INDICATOR -->
             <ActivityIndicator
