--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/BasketItemTemplate.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/BasketItemTemplate.xaml
@@ -117,7 +117,7 @@
                     <!-- PRICE -->
                     <Label 
                         Grid.Column="0"
-                        Text="{Binding UnitPrice, StringFormat='${0:N}'}"
+                        Text="{Binding UnitPrice, StringFormat='€{0:N}'}"
                         Style="{StaticResource OrderItemUnitPriceStyle}"/>
                     <!-- QUANTITY -->
                     <Label    
@@ -128,7 +128,7 @@
                 <!-- TOTAL -->
                 <Label
                     Grid.Row="2"
-                    Text="{Binding Total, StringFormat='${0:N}'}"
+                    Text="{Binding Total, StringFormat='€{0:N}'}"
                     Style="{StaticResource OrderTotalStyle}"/>
             </Grid>
             <Grid
