--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/LoginView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/LoginView.xaml
@@ -88,6 +88,21 @@
                 <Setter Property="Margin"
                     Value="12" />
             </Style>
+            
+            <Style x:Key="FilterPickerStyle"  
+             TargetType="{x:Type Picker}">
+                <Setter Property="HeightRequest"
+                Value="48" />
+                <Setter Property="BackgroundColor"
+                Value="Transparent" />
+                <Setter Property="HorizontalOptions"
+                Value="Center" />
+                <Setter Property="VerticalOptions"
+                Value="Fill" />
+                <Setter Property="Margin"                
+                Value="0, 2" />
+            </Style>
+
 
             <animations:StoryBoard
               x:Key="LoginAnimation"
@@ -118,8 +133,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="60" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <!-- LOGIN / REGISTER / SETTINGS -->
             <Grid   
@@ -158,10 +174,10 @@
                 </StackLayout>
             </Grid>
             <!-- INFO -->
-            <!--<Label
+            <Label
               Grid.Row="1"
-              Text="ARE YOU REGISTERED?"
-              Style="{StaticResource TitleLabelStyle}"/>-->
+              Text="Quem és tu?"
+              Style="{StaticResource TitleLabelStyle}"/>
             <!-- LOGIN FORM -->
             <StackLayout   
                 Grid.Row="2"
@@ -281,6 +297,23 @@
 					Text="{Binding Password.Errors, Converter={StaticResource FirstValidationErrorConverter}"
 					Style="{StaticResource ValidationErrorLabelStyle}" />-->
             </StackLayout>
+            <Label
+              Grid.Row="3"
+              Text="Local"
+              Style="{StaticResource TitleLabelStyle}"/>
+            <Picker
+              Grid.Row="4"
+              ItemsSource="{Binding Places}"
+              SelectedItem="{Binding PlaceSelected, Mode=TwoWay}"
+              Style="{StaticResource FilterPickerStyle}">
+                <Picker.SelectedIndex>0</Picker.SelectedIndex>
+                <Picker.HeightRequest>
+                    <OnPlatform x:TypeArguments="x:Double">
+                        <On Platform="iOS, Android" Value="48" />
+                        <On Platform="UWP, WinRT, WinPhone" Value="36" />
+                    </OnPlatform>
+                </Picker.HeightRequest>
+            </Picker>
             <!-- LOGIN BUTTON -->
             <!--
             <Grid
