--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/ProfileView.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/ProfileView.xaml
@@ -49,12 +49,12 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!-- LOG OUT BUTTON -->
-        <Button         
+        <!--<Button         
             Grid.Row="0"
             Text="LOG OUT" 
             TextColor="{StaticResource BlackColor}"
             BackgroundColor="{StaticResource GrayColor}"
-            Command="{Binding LogoutCommand}" />
+            Command="{Binding LogoutCommand}" />-->
         <!-- ORDERS -->
         <Grid
             Grid.Row="1">
